# Machine-Learning-Notes

./: README.md  pyproject.toml  swissroll.ipynb  vanilla_backpropogation.ipynb  vanilla_classification_gradient_descent.ipynb
scikit-learn MOOC inria/M1-The Predictive Modeling Pipeline/: 01_tabular_data_exploration.ipynb  02_model_validation_vid.ipynb  02_numerical_pipeline_cross_validation.ipynb  02_numerical_pipeline_hands_on.ipynb  02_numerical_pipeline_introduction.ipynb  02_numerical_pipeline_scaling.ipynb  03_categorical_pipeline.ipynb  03_categorical_pipeline_column_transformer.ipynb  03_categorical_pipeline_visualization.ipynb
scikit-learn MOOC inria/M2-Selecting the best model/: cross_validation_learning_curve.ipynb  cross_validation_train_test.ipynb  cross_validation_validation_curve.ipynb
scikit-learn MOOC inria/M3-Hyperparameter tuning/: parameter_tuning_grid_search.ipynb  parameter_tuning_manual.ipynb  parameter_tuning_nested.ipynb  parameter_tuning_parallel_plot.ipynb  parameter_tuning_randomized_search.ipynb
scikit-learn MOOC inria/M4-Linear Models/: linear_models_feature_engineering_classification.ipynb  linear_models_regularization.ipynb  linear_regression_in_sklearn.ipynb  linear_regression_non_linear_link.ipynb  linear_regression_without_sklearn.ipynb  logistic_regression.ipynb
scikit-learn MOOC inria/M5-Decision tree models/: tree_regression.ipynb  trees_classification.ipynb  trees_hyperparameters.ipynb
scikit-learn MOOC inria/M6-Ensemble of models/: ensemble_adaboost.ipynb  ensemble_bagging.ipynb  ensemble_gradient_boosting.ipynb  (+4 more)
(+6 files in other folders)
